--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^12.6.0",
     "react": "^19.2.3",
+    "recharts": "^3.5.1",
     "react-dom": "^19.2.3",
-    "recharts": "^3.5.1"
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
